some js animation fix

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <script>
         const gameDataRes = {
             "aspectRatio": '4-3',
-            'desktopColumnSave': false,
+            'desktopColumnSave': true,
             'arrowType': 'black',
             "cardImages": [
                 "https://swiperjs.com/demos/images/nature-5.jpg",
