add some js fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="application_wrapper">
         <div class="grid-game" id="grid-game"></div>
-        <a href="https://vnutricom.ru/lk/" class="application_dev" style="margin-top: -15px;">
+        <!-- <a href="https://vnutricom.ru/lk/" class="application_dev" style="margin-top: -15px;">
             <span>Сделано в бесплатной версии</span>
             <div class="dev-logo">
                 <svg width="127" height="27" viewBox="0 0 127 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -53,7 +53,7 @@
                         fill="#FA0056" />
                 </svg>
             </div>
-        </a>
+        </a> -->
     </div>
     <script src="./js/grid-game.js"></script>
     <script>
@@ -66,11 +66,9 @@
                     "https://swiperjs.com/demos/images/nature-5.jpg",
                     "https://swiperjs.com/demos/images/nature-6.jpg",
                     "https://swiperjs.com/demos/images/nature-7.jpg",
-
                     "https://swiperjs.com/demos/images/nature-5.jpg",
                     "https://swiperjs.com/demos/images/nature-6.jpg",
                     "https://swiperjs.com/demos/images/nature-7.jpg",
-
                     "https://swiperjs.com/demos/images/nature-5.jpg",
                     "https://swiperjs.com/demos/images/nature-6.jpg",
                     "https://swiperjs.com/demos/images/nature-7.jpg",
@@ -85,7 +83,6 @@
                     'Подсказка для 7 карточки',
                     'Подсказка для 8 карточки',
                     'Подсказка для 9 карточки',
-
                 ],
                 'resultMessage': 'Какое то сообщение при успешной сборке игры',
             };
